router_macro/tests/ui/invalid_wildcard.stderr
error: Invalid static segment: any*
 --> tests/ui/invalid_wildcard.rs:4:19
  |
4 |     let _ = path!("/home/any*");
  |                   ^^^^^^^^^^^^
